# PhoneTile

./: .gitignore  .gitmodules  README.md
.github/workflows/: client.yml  server.yml
client/: .gitignore  Makefile  README.md  build.sh
client/.cargo/: config
client/android/: .gitignore
client/app/: AndroidManifest.xml  Cargo.toml  Makefile  build.rs  phone_tile.apk
client/app/.cargo/: config
client/app/android/: phone_tile.keystore
client/app/src/: lib.rs
client/app/src/animation/: mod.rs
client/app/src/game/: game_select.rs  mod.rs
client/app/src/game/cars/: game.rs
client/app/src/game/golf/: mod.rs
client/app/src/game/maze_fight/: mod.rs  sprite.rs  wall.rs
client/app/src/game/racer/: mod.rs
client/app/src/game/snake/: mod.rs
client/app/src/network/: mod.rs  network.rs  packet.rs
client/app/src/ui/: button.rs  colors.rs  keyboard.rs  mod.rs  text.rs  widget.rs
client/native_app_glue/: Cargo.toml  build.rs  lib.rs
client/native_app_glue/src/: wrapper.h
client/raylib/: Cargo.toml  build.rs
client/raylib/.cargo/: config
client/raylib/src/: lib.rs  macros.rs  wrapper.h
client/src/: main.c
client/src/game/: game.h
client/src/memory/: MEM_alloc.h
client/src/network/: network.h
client/src/object/: object.h
client/src/physicEngine/: physic.h
client/src/renderer/: renderer.h
client/src/ui/: ui.h
server/: Cargo.toml  README.md
server/game/physicEngine/: Cargo.toml
server/src/: main.rs
server/src/game/: bezier.rs  game.rs  mod.rs
server/src/network/: client.rs  connection.prot  connection.rs  game.rs  mock_mpsc.rs  (+8 more)
(+38 files in other folders)
