[package]
name = "phone_tile"
version = "0.0.1"
authors = [ " <lzebulon@archlinux>" ]

[lib]
name = "phone_tile"
crate-type = ["cdylib"]



[profile.release]
strip = true

[dependencies]
raylib = {path = "../raylib"}

[target.'cfg(target_os = "android")'.dependencies]
native_app_glue = {path = "../native_app_glue"}
